--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+        <li> <a href="#!">salom</a></li>
+        </ul>
+    </header>
 </body>
-</html>
+</html>g
