--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <li> <a href="#!">salom</a></li>
         </ul>
     </header>
+    <section>
+        
+    </section>
 </body>
-</html>g
+</html>
