--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         </ul>
     </header>
     <section>
-        
-    </section>gti ma
+        <ul>
+            <li>
+                
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
