--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <h2>
+            
+        </h2>
+    </footer>
 </body>
 </html>
